--- a/CSS3/assets/stylesheets/links.css
+++ b/CSS3/assets/stylesheets/links.css
@@ -3,15 +3,15 @@ Together-2
  */
  body{
 	background:#B3B3B3;
-	margin:2%;
-	font-size: 150%;
+	/*margin:2%;*/
+	/*font-size: 150%;*/
 
 } 
 
 header{
-	background: #00b7ea;
+	/*background: #00b7ea;*/
 	text-align: center;
-	padding-bottom: 15px;
+	/*padding-bottom: 15px;*/
 }
 
 h1{
@@ -37,7 +37,7 @@ section{
 	float:left;
 }
 
-/*LISTS STYLE*/
+/*============== LISTS STYLE =================*/
 div{
 	margin-right: 2%;
 	clear: both;
@@ -62,7 +62,7 @@ details{
 }
 
 footer{
-	background: #00b7ea;
+	/*background: #00b7ea;*/
 	height:100px;
 	clear: both;
 }
@@ -71,6 +71,7 @@ img{
 	width: 75px;
 }
 
+/*============== Links Style ===============*/
 nav a {
 	display: inline-block both;
 	font-weight: bold;
@@ -115,6 +116,7 @@ a:active{
 }
 
 /*================= Pseudo-elements ===================*/
+/*Continue Reading*/
 .arrow {
   margin-top: auto;
   width: auto;
@@ -126,6 +128,7 @@ a:active{
   padding: 0 12px;
   position: relative;
   text-decoration: none;
+  right: -15px;
 }
 .arrow:before,
 .arrow:after {
