--- a/CSS3/assets/stylesheets/positioning.css
+++ b/CSS3/assets/stylesheets/positioning.css
@@ -57,6 +57,7 @@ nav a:active{
 	width: 200px;
 	height: 150px;
 	border: 2px solid #000000; /*black*/
+	text-decoration: none;
 	/*border-radius: 6px;*/
 	/* ========= Here is a Tarnsitions ============= */
 	transition-property: color, width, background,border-radius;
