--- a/AS&RD/assets/stylesheets/bootstrap.css
+++ b/AS&RD/assets/stylesheets/bootstrap.css
@@ -6,6 +6,13 @@ main{
 	margin: 0 0.2em;
 }
 
+.image-responsive{
+	width: 100%;
+	max-width: 250px;
+	min-width: 200px;
+	height: auto;
+}
+
 div{
   font-size:120%;
   
@@ -25,3 +32,4 @@ div[class$=md]{
 div[class$=sm]{
   color:green;
 }
+
