--- a/WD4ECapstone/Final_project/css/styles.css
+++ b/WD4ECapstone/Final_project/css/styles.css
@@ -25,9 +25,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
-  display: flex;
+  display: block;
   min-height: 100vh;
-  flex-direction: column;
 }
 
 section{
@@ -59,6 +58,7 @@ h1{
   top: 0; /* Stay on top */
   width: 100%; /* Full width */
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
+  z-index: -1;
 }
 
 /* Style the navbar links */
@@ -82,7 +82,7 @@ h1{
 /* ===================== More images button ========================== */
 .morecontent{
 	visibility: visible;
-	position: absolute;
+	position: relative;
 	background-color: #4CAF50;
 	border: none;
 	font-size: 1.5rem;
