--- a/WD4ECapstone/Final_project/css/styles.css
+++ b/WD4ECapstone/Final_project/css/styles.css
@@ -1,3 +1,5 @@
+/* ===================== Main ========================== */
+/*1 rem = 16px, 1em = font-size value*/
 *,
 *::before,
 *::after {
@@ -22,10 +24,10 @@ body {
   font-family: 'Work Sans';
   font-size: 20px;
   font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
+  line-height: 1.5em;
+  color: #fff;
   text-align: left;
-  background-color: #fff;
+  background-color: #0071bc; 
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -33,7 +35,6 @@ body {
 }
 
 section{
-	border: 2px solid black;
 	position: inherit;
 }
 
@@ -43,34 +44,48 @@ section img{
 }
 
 h1{
-	padding-top: 60px;
+	padding-top: 70px;
 	text-align: center;
-	border: solid; /*for tests*/
 }
+
+h2, p{
+	padding: 0 1em;
+	text-align: justify;
+}
+
+p{
+	text-indent: 1em;
+}
+
+a{
+	color: #fff;
+}
+
 
 /* Set the size of the div element that contains the map */
 #map {
   height: 400px;
-  width: 100%;
+  width: 95%;
+  margin: auto;
+  max-width: 768px;
 }
 
 /* ===================== Navbar ========================== */
-#navbar {
-  background-color: #333; /* Black background color */
+#navbar{
+  background-color: #112e51; /* Black background color */
   position: fixed; /* Make it stick/fixed */
   padding: 1.5rem;
-  top: 0; /* Stay on top */
-  width: 100%; /* Full width */
+  top: 0;
+  width: 100%;
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
   z-index: 1000;
 }
 
 /* Style the navbar links */
 #navbar a {
-  color: white;
+  color: #fff;
   padding: 15px;
   text-decoration: none;
-
 }
 
 #navbar a:hover {
@@ -87,9 +102,8 @@ h1{
 .morecontent{
 	visibility: visible;
 	position: relative;
-	background-color: #4CAF50;
+	background-color: #112e51;
 	border: none;
-	font-size: 1.5rem;
 	color: #FFFFFF;
 	padding: 20px;
 	width: 100%;
@@ -104,7 +118,7 @@ h1{
 
 .morecontent:after {
 	content: "";
-	background: #90EE90;
+	background: #5B95DC;
 	display: block;
 	position: absolute;
 	padding-top: 300%;
@@ -123,7 +137,6 @@ h1{
 }
 
 /* ===================== Contact form ========================== */
-
 textarea{
 	height: 200px;
 }
@@ -136,10 +149,11 @@ input[type=text], input[type=email], select, textarea {
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
+  background-color: #4773aa;
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: #112e51;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -148,24 +162,48 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #1A4375;
 }
 
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
 
 /* ===================== Footer styling ========================== */
-.fab {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
+footer{
+	margin-top: 1em;
+	padding-bottom: 1.5em;
+	padding-left: 1em;
+	padding-right: 1em;
+	width: 100%;
+	background-color: #112e51;
 }
 
+footer a{
+	margin: 0 auto;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin-right: 5%;
+}
+
+#about div a{
+	text-decoration: none;
+}
 
 /* ===================== Back to Top Button ========================== */
+#goTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #112e5161;	/*here added opaccity (two last numbers)*/
+  color: white;
+  cursor: pointer;
+  padding: 5px 15px;
+  border-radius: 4px;
+}
+
+#goTop:hover {
+  background-color: #003D66;
+}
