--- a/WD4ECapstone/Final_project/css/styles.css
+++ b/WD4ECapstone/Final_project/css/styles.css
@@ -213,6 +213,7 @@ footer a {
 }
 
 /* ===================== Media queries ========================== */
+/*Medium screen*/
 @media screen and (min-width: 768px) {
 	.img-thumbnail,
 	.morecontent {
@@ -222,7 +223,9 @@ footer a {
 	.item a {
 		height: 100%;
 	}
-
+}
+/*Large screen*/
+@media screen and (min-width: 992px) {
 	#history, 
 	#location {
 		float: left;
